--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,8 @@ jobs:
         port: ${{ secrets.SSH_PORT }}
         script: |
           cd ~
-          ls
+          cp .env ~/admin/development/.env
+          cd ~/art
+          chmod +x redeploy-admin-front.sh
+          bash ./redeploy-admin-front.sh
+          
