--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,17 @@
 server {
-		listen 80;
-		server_name admin.artdate.ex2.team;
+    listen       80;
+    server_name  localhost;
 
-		location / {
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-			proxy_set_header Host $host;
-			proxy_pass http://localhost:3317;
-			proxy_http_version 1.1;
-			proxy_set_header Upgrade $http_upgrade;
-			proxy_set_header Connection "upgrade";
-		}
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+
 }
