--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         script: |
           cd ~
           cp .env ~/admin/development/.env
+          cp .env ~/admin/.env
           chmod +x redeploy-admin-front.sh
           bash ./redeploy-admin-front.sh
           
