--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.10",
     "@reduxjs/toolkit": "^1.9.5",
+    "async-mutex": "^0.4.0",
     "axios": "^1.5.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
